--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,8 @@
+<!-- <<<<<<< HEAD -->
 <h1> Welcome!</h1>
+<!-- ======= -->
+<h1><% Welcome!%></h1>
+<!-- >>>>>>> 05344dc35af08d2b6e7502f4d54fc5c84b461126 -->
 
 <form action="/greet" method="POST">
   <label for="user_name">Name:</label>
