--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,15 @@
-<!-- <<<<<<< HEAD -->
-<h1> Welcome!</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+
+  </head>
+  <body>
+
+  </body>
+</html>
+
+  <title><h1> Welcome!</h1></title>
 <!-- ======= -->
 <h1><% Welcome!%></h1>
 <!-- >>>>>>> 05344dc35af08d2b6e7502f4d54fc5c84b461126 -->
