automatically backed up by learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -6,10 +6,9 @@
   </head>
   <body>
 
-  <title><h1> Welcome!</h1></title>
+  <!-- <title><h1> Welcome!</h1></title> -->
 <!-- ======= -->
 <h1><% Welcome!%></h1>
-<!-- >>>>>>> 05344dc35af08d2b6e7502f4d54fc5c84b461126 -->
 
 <form action="/greet" method="POST">
   <label for="user_name">Name:</label>
