--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,7 @@
 
   <!-- <title><h1> Welcome!</h1></title> -->
 <!-- ======= -->
-<h1><% Welcome!%></h1>
+<h1><%=Welcome!%></h1>
 
 <form action="/greet" method="POST">
   <label for="user_name">Name:</label>
