--- a/views/index.erb
+++ b/views/index.erb
@@ -6,7 +6,7 @@
   </head>
   <body>
 
-  <title><h1>Welcome!</h1></title>
+  <h1>Welcome!</h1>
 <!-- <h1><%=Welcome!%></h1> -->
 
 <form action="/greet" method="POST">
